Fix alignments, "employee" blocks.

--- a/media/css/template.css
+++ b/media/css/template.css
@@ -12428,8 +12428,10 @@ header.header .position-0 form.mod-login-logout div.logout-button button {
   left: unset;
   margin-bottom: 30px;
   padding: 18px 20px 19px 0;
+  max-width: calc(100% - 74px);
 }
 .blog.content-category-custom .main-content__left .page-header h2, .blog.content-category-custom .main-content__left .page-header .h2 {
+  font-family: "DIN2014-Demi", sans-serif;
   font-size: 28px;
   font-weight: 700;
   color: #333;
@@ -12667,29 +12669,20 @@ header.header .position-0 form.mod-login-logout div.logout-button button {
   }
 }
 .container.main-content {
-  padding-left: 15px;
+  max-width: 1770px;
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 .blog.content-category-custom .page-header .subheading-category {
-  left: 15px;
+  left: 25px;
 }
 
 header.header .header__left {
-  left: 15px;
+  left: 25px;
 }
 
 @media (min-width: 768px) {
-  .container.main-content {
-    padding-left: 20px;
-  }
-  .blog.content-category-custom .page-header .subheading-category {
-    left: 20px;
-  }
-  header.header .header__left {
-    left: 20px;
-  }
-}
-@media (min-width: 1200px) {
   .container.main-content {
     padding-left: 25px;
   }
@@ -12698,6 +12691,17 @@ header.header .header__left {
   }
   header.header .header__left {
     left: 25px;
+  }
+}
+@media (min-width: 1200px) {
+  .container.main-content {
+    padding-left: 30px;
+  }
+  .blog.content-category-custom .page-header .subheading-category {
+    left: 30px;
+  }
+  header.header .header__left {
+    left: 30px;
   }
 }
 @media (min-width: 1400px) {
@@ -12724,10 +12728,84 @@ header.header .header__left {
   font-size: 22.4px;
   text-decoration: underline;
 }
+.osrthorizon-content-body p iframe, .osrthorizon-content-body li iframe {
+  max-width: 100%;
+}
 .osrthorizon-content-body ul {
   list-style: outside disc;
 }
+.osrthorizon-content-body h1, .osrthorizon-content-body .h1, .osrthorizon-content-body h2, .osrthorizon-content-body .h2, .osrthorizon-content-body h3, .osrthorizon-content-body .h3, .osrthorizon-content-body h4, .osrthorizon-content-body .h4, .osrthorizon-content-body h5, .osrthorizon-content-body .h5 {
+  font-weight: 700;
+  padding: 0;
+}
+.osrthorizon-content-body h1, .osrthorizon-content-body .h1 {
+  font-size: 2em;
+  margin: 0 0 0.75em;
+}
+.osrthorizon-content-body h2, .osrthorizon-content-body .h2 {
+  font-size: 1.5em;
+  margin: 0 0 1em;
+}
+.osrthorizon-content-body h3, .osrthorizon-content-body .h3 {
+  font-size: 1.1666em;
+  margin: 0 0 1.286em;
+}
 
+/**
+ * Syles for "employee" images in whos-who page.
+ */
+div.employees {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 80px 60px;
+  margin: 50px 0 110px;
+}
+div.employees .employees-block {
+  width: 170px;
+  height: 170px;
+}
+div.employees .employees-block img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+div.employees .employees-block .employees__text {
+  color: #aaa;
+  font-size: 20px !important;
+  line-height: 22px !important;
+  margin: 5px 0 !important;
+}
+div.employees .employees-block .employees__text a {
+  color: #FF5F00;
+  background-color: inherit;
+  padding: 0px !important;
+  font-size: inherit !important;
+  font-family: inherit;
+  display: inherit;
+}
+
+@media (min-width: 768px) {
+  div.employees .employees-block {
+    width: 200px;
+    height: 200px;
+  }
+  div.employees .employees-block .employees__text {
+    font-size: 22px !important;
+  }
+}
+@media (min-width: 1200px) {
+  div.employees .employees-block {
+    width: 260px;
+    height: 260px;
+  }
+  div.employees .employees-block .employees__text {
+    font-size: 24px !important;
+    line-height: 29px;
+    margin-left: 20px !important;
+  }
+}
 *, *:before, *:after {
   padding: 0;
   margin: 0;
